--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>David Kaio | Editor de Vídeo, Designer & Artista 3D</title>
+    <meta name="description" content="Seu próximo projeto merece ser inesquecível. Editor de vídeo e designer em Contagem/MG transformando ideias em experiências visuais que conectam marcas ao seu público." />
+    <meta name="author" content="David Kaio" />
+    <meta name="theme-color" content="#F97316" />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <meta property="og:title" content="David Kaio | Editor de Vídeo, Designer & Artista 3D" />
+    <meta property="og:description" content="Seu próximo projeto merece ser inesquecível. Editor de vídeo e designer transformando ideias em experiências visuais impactantes." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:locale" content="pt_BR" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="David Kaio | Editor de Vídeo, Designer & Artista 3D" />
+    <meta name="twitter:description" content="Seu próximo projeto merece ser inesquecível. Editor de vídeo e designer transformando ideias em experiências visuais impactantes." />
   </head>
 
   <body>
